# bevy-gpu-insert

./: Cargo.toml  README.md
assets/: generate.wgsl
examples/: generate.rs
examples/generate/: generate_mesh.rs  generated_mesh.rs  into_render_asset.rs  main.rs
examples/generate/compute/: generate_mesh.wgsl  graph.rs  mod.rs  pipeline.rs
examples/gpu-generate/: generate_mesh.rs  generated_mesh.rs  main.rs
examples/gpu-generate/compute/: generate_mesh.wgsl  graph.rs  mod.rs
src/: from_raw.rs  generate_mesh.rs  gpu_insert.rs  lib.rs  mirror_handle.rs  transfer.rs
src/compute/: graph.rs  mod.rs  pipeline.rs
