[package]
name = "bevy-gpu-insert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../bevy" }
wgpu = "0.13"
crossbeam-channel = "0.5"
itertools = "0.10"

[[example]]
name = "generate"
