[package]
name = "bevy-gpu-insert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
crossbeam-channel = "0.5"

[[example]]
name = "generate"

[dev-dependencies]
itertools = "0.10"
bevy-into-render-asset = { git = "https://github.com/VVishion/bevy-into-render-asset" }
bevy-map-handle = { git = "https://github.com/VVishion/bevy-map-handle" }
